--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,10 +2,16 @@
   text-align: center;
 
   position: absolute;
-  left: 0;
-  right: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-shadow: 5px 5px 10px #8c8c8c;
+  height: 300px;
+  width: 30%;
   top: 50%;
-  transform: translateY(-50%);
 }
 
 #container strong {
@@ -25,3 +31,24 @@
 #container a {
   text-decoration: none;
 }
+.foto {
+  background-image: url(./adr.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: (50%, 50%);
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+}
+@media (min-width: 360px) and (max-width: 480px){
+  #container{
+    width: 90%;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px){
+  #container{
+    width: 90%;
+  }
+}
+
+
